# SenseVoice.cpp

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  common-alsa.cpp  common-alsa.h
examples/stream/: CMakeLists.txt  stream.cc
sense-voice/csrc/: common.cc  common.h  sense-voice-decoder.cc  sense-voice-encoder.cc  sense-voice.cc  sense-voice.h
